# app

./: electron-builder.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-13-inklet-portal.md
docs/superpowers/specs/: 2026-05-13-inklet-portal-design.md  2026-05-13-inklet-portal-electron-design.md
electron/: auth.ts  main.ts  preload.ts  sync.ts  updater.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  mock.ts
src/components/: AttachmentList.tsx  BottomNav.tsx  Header.tsx  InputBar.tsx  InputBox.tsx  LinkModal.tsx  LoginPopup.tsx  ManualPopup.tsx  ModeSwitch.tsx  PushModeSelector.tsx  SettingsPopup.tsx  SourcesPopup.tsx  StatusIndicator.tsx  UpdatePopup.tsx
src/hooks/: useTauriWindow.ts
src/stores/: appStore.ts  authStore.ts  deviceStore.ts  historyStore.ts  pushStore.ts  sourceStore.ts
src/styles/: globals.css
src/types/: index.ts
src/views/: DevicesView.tsx  HistoryView.tsx  HomeView.tsx  SettingsView.tsx  SourcesView.tsx
tests/: setup.ts
tests/stores/: appStore.test.ts  deviceStore.test.ts  historyStore.test.ts  pushStore.test.ts  sourceStore.test.ts
